Resolves spacing issue on project viewer panel

--- a/src/styles/work/components/project-viewer.module.scss
+++ b/src/styles/work/components/project-viewer.module.scss
@@ -1,14 +1,23 @@
-.projectViewer {
-	display:grid;
-	grid-template-columns:repeat(auto-fit, minmax(400px, 450px));
-	gap:2em;
-	padding:2em 4em;
+.projectViewerContainer {
 	min-height:381.19px;
 	height:70%;
 	min-width:60%;
 	max-width:60%;
-	background:white;
+	padding:2em 4em 0 4em;
 	overflow-y:scroll;
+	background:white;
+}
+
+.projectViewer {
+	display:grid;
+	grid-template-columns:repeat(auto-fit, minmax(400px, 450px));
+	gap:2em;
+}
+
+.spacer {
+	display:block;
+	height:1.5em;
+	width:100%;
 }
 
 /*
