--- a/src/styles/work/components/project.module.scss
+++ b/src/styles/work/components/project.module.scss
@@ -7,7 +7,6 @@
 	transition:all 150ms ease-in-out;
 	max-height:100%;
 	cursor:pointer;
-	overflow-y:scroll;
 
 	p, h2, span {
 		transition:all 150ms ease-in-out;
